# dotfiles

./: .editorconfig  .pre-commit-config.yaml  README.md  devbox.json  dotfiles-mapping.json  dotfiles-mapping.yml  dotfiles_install.py  dotfiles_link.py  link_dotfiles.py  linker.yaml  mappings.yml  packages.json  packages_install.py  pyproject.toml  repo_sync.py  requirements.txt  symlinks.json
.config/powershell/: user_profile.ps1
binary-downloader/: go.mod  main.go
configs/: .gitconfig  Microsoft.PowerShell_profile.ps1
dotfiles/: .alacritty.toml  .alacritty.yml  .gitconfig  .skhdrc  .tmux.conf  .yabairc  .zshrc  Microsoft.PowerShell_profile.ps1  starship.toml
dotfiles/hypr/: hyprland.conf
dotfiles/qtile/: config.py
dotfiles/sway/: config
dotfiles/waybar/: config  style.css
linker/: README.md  devbox.json  main.py  pyproject.toml
linker/src/: main.py
playbooks/: packages.yml  setup-local.yml
scripts/: install.sh  setup.sh
