[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Jakub Kosmaty <jacobkosmaty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
ruamel-yaml = "^0.17.21"
ansible = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
