[tool.poetry]
name = "linker"
version = "1.0.0"
description = ""
authors = ["Jakub Kosmaty <jacobkosmaty@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.6.1"
ruamel-yaml = "0.18.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.1"
ruff = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
linker = 'src.main:main'
